Actions
Bug #14307
closedloader: bcache: Fix debug printf
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Picked up fix from FreeBSD:
Use %j to it works on 64 and 32 bits system.
Testing done: build with #define BCACHE_DEBUG does not produce errors.
Updated by Electric Monk 8 months ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 2377faa90a4c2d3d07ca98ca1dcc926a6e269898
commit 2377faa90a4c2d3d07ca98ca1dcc926a6e269898 Author: Emmanuel Vadot <manu@FreeBSD.org> Date: 2022-01-04T21:25:33.000Z 14307 loader: bcache: Fix debug printf Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: Robert Mustacchi <rm@fingolfin.org> Approved by: Dan McDonald <danmcd@joyent.com>
Actions